[package]
name = "nail-blog"
version = "0.0.4"
edition = "2021"
license = "MIT"
description = "A lightning fast static blog engine"
homepage = "https://github.com/quintschaf/nail"

[[bin]]
name = "nail"
path = "src/main.rs"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
chrono = "0.4"
comrak = "0.14"
crc = "3.0"
handlebars = "4.3"
toml = "0.5"
notify = "5.0.0"
parking_lot = "0.12"
tiny_http = "0.11"